@@ -1,3 +1,11 @@
+2009-01-04  Jon Nettleton  <jon.nettleton@gmail.com>
+
+	* src/via_driver.c: (VIAPreInit):
+
+	Patch submitted by Robert Bridge to clean up compiler
+        warnings.  Should close trac ticket #243.  Thanks
+	RobbieAB.
+
 2008-12-29  Jon Nettleton  <jon.nettleton@gmail.com>
 
 	* src/via_accel.c: (viaInitXAA):
